# synthesis_helper

./: .gitignore  CLAUDE.md  README.md  bootstrap_ecoli_shell0.py  download_data.py  main.py  pyproject.toml  requirements.txt
data/: ec_names.tsv
scripts/: build_ec_names.py  fetch_cytoscape.py  start_mcp.sh
synthesis_helper/: __init__.py  __main__.py  composition.py  io.py  models.py  parser.py  pathways.py  synthesize.py  traceback.py
synthesis_helper/mcp/: __init__.py  html_render.py  lookup.py  serializers.py  server.py  similarity.py  state.py  visualize.py
tests/: conftest.py  test_edge_cases.py  test_html_render.py  test_invariants.py  test_mcp_server.py  test_metacyc_smoke.py  test_small_cell_pathways.py  test_small_cell_synthesize.py  test_small_cell_traceback.py  test_synthesize.py
tests/fixtures/: small_cell.py
validation/: small_cell.md  tyrosine_degradation_validation.md
